--- a/NatureBasketBoutique/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/NatureBasketBoutique/Areas/Customer/Views/Cart/Summary.cshtml
@@ -94,7 +94,7 @@
                         <span>Estimate Arrival Date: <strong>@DateTime.Now.AddDays(3).ToShortDateString() - @DateTime.Now.AddDays(7).ToShortDateString()</strong></span>
                     </div>
 
-                    <button type="submit" asp-action="SummaryPOST" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-4 rounded-lg shadow-lg transition transform hover:-translate-y-1 flex justify-center items-center text-lg">
+                    <button type="submit" asp-action="Summary" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-4 rounded-lg shadow-lg transition transform hover:-translate-y-1 flex justify-center items-center text-lg">
                         Place Order <i class="bi bi-chevron-right ml-2 text-sm"></i>
                     </button>
                 </div>
